<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical"
    android:padding="30dp"
    android:transitionName="transition_proLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/patch" />

        <TextView
            android:id="@+id/login_beapro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:onClick="callProWelcome"
            android:text="@string/be_a_pro"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/login_code_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border"
            android:padding="8dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="NP"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phonenum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/login_code_picker"
            android:hint="@string/phonenumber"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_semibold"
                android:id="@+id/professional_phonenumber"
                android:inputType="text"
                android:maxLength="10"
                android:textColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/login_phonenum"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_semibold"
                android:id="@+id/professional_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/remember_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/login_rememberne"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/remember_me"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/login_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="#00000000"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="forgotPasswordCall" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            android:layout_below="@id/remember_block"
            android:onClick="userLoginApp"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_createUserAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_button"
            android:onClick="callUserSignIn"
            android:text="@string/create_acc"
            android:textColor="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/whiteprogressbar"
            android:elevation="8dp">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </RelativeLayout>


    </LinearLayout>
</ScrollView>